# hse-archiver

./: CMakeLists.txt  readme.md
src/: archiver.cpp  archiver_constants.h  archiver_exceptions.h  archiver_structs.cpp  archiver_structs.h  binary_trie.cpp  binary_trie.h  bit_reader.cpp  bit_reader.h  bit_writer.cpp  bit_writer.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  huffman_encoder.cpp  huffman_encoder.h  min_heap.h  unit_tests.cpp
